NGP-TWC/wdp-abstract-canvas#1345 fix multiple scrollbars (#1363)

--- a/canvas_modules/common-canvas/assets/styles/common-properties-right-flyout.css
+++ b/canvas_modules/common-canvas/assets/styles/common-properties-right-flyout.css
@@ -121,7 +121,6 @@
 	height: 100%;
 	padding-left: 10px;
 	padding-right: 20px;
-	overflow-y: auto;
 	border-bottom: 2px solid #dfe3e6;
 }
 
